# amber-web-provenance

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
amber/: __init__.py  capture_cli.py  cli.py  merkle.py  packet.py  signer.py  verifier.py
amber/business/: __init__.py  dollarize.py
amber/capture/: __init__.py  brightdata.py  credentials.py  discover.py  extract.py  floor.py  geoattr.py  harness.py  identity.py  record.py  retry.py  softblock.py  state.py  vat.py
amber/jury/: __init__.py  cli.py  client.py  goldset.py  jury.py  taxonomy.py
amber/keys/: README.md  demo-signer.key  demo-signer.pub  trusted_signers.txt
amber/memory/: __init__.py  cli.py  config.py  observations.py  persistence.py  store.py
samples/: floor_demo_packet.legal_advisory.json
scripts/: build_real_packet.py  build_rir_snapshot.py  gate2_floor_demo.py  ingest_temporal_sequence.py  redact_and_reseal_packets.py  reseal_live_packet.py
tests/: conftest.py  test_business_dollarize.py  test_capture_brightdata.py  test_capture_brightdata_transport.py  test_capture_credentials.py  test_capture_discover.py  test_capture_extract.py  test_capture_floor.py  test_capture_geoattr.py  test_capture_identity.py  test_capture_per_country_url.py  test_capture_retry.py  test_capture_softblock.py  test_capture_state.py  test_capture_tls_negative_control.py  test_capture_vat.py  test_jury_cli_separation.py  test_jury_client.py  test_jury_consensus.py  test_jury_goldset.py  test_jury_live_smoke.py  test_memory_cli.py  test_memory_config.py  test_memory_live_smoke.py  test_memory_observations.py  test_memory_persistence.py  test_memory_store.py  test_merkle.py  test_packet_verify.py  test_real_packet.py  test_signer.py  test_workflow_client.py  test_workflow_event.py  test_workflow_live_smoke.py  test_workflow_orchestration.py  test_workflow_sql.py
web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+85 files in other folders)
