[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amber-web-provenance"
version = "0.1.0"
description = "Amber — forensically-signed, geo-attributed observations of public web state. Component 1: the signed-provenance primitive + offline verify_packet."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Yashash Sheshagiri" }]
dependencies = [
    # ed25519 signing/verification + sha256. Apache-2.0 / BSD licensed.
    "cryptography>=42.0",
    # HTTP client for the Bright Data residential super-proxy. Apache-2.0.
    # Unlike urllib, requests/urllib3 send Proxy-Authorization on the HTTPS
    # CONNECT tunnel, which the residential proxy requires.
    "requests>=2.31",
    # OpenAI SDK — used ONLY by the Phase-2 Layer-2 jury (amber/jury/) against
    # the AI/ML API gateway (api.aimlapi.com). Apache-2.0. The Phase-1 signed-
    # packet core does not import it.
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
verify_packet = "amber.cli:main"
seal_packet = "amber.cli:seal_main"
amber-capture = "amber.capture_cli:main"
amber-jury = "amber.jury.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["amber"]
# Ship the offline RIR geo-attribution snapshot (real RIPE delegation data) +
# the committed signer public material with the package.
artifacts = [
    "amber/capture/data/*.tsv",
    # The committed Bright Data Proxy Root CA used to validate the intercepted
    # residential-proxy CONNECT tunnel (verification stays ON, never disabled).
    "amber/capture/data/*.crt",
    "amber/keys/*.pub",
    "amber/keys/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
